--- a/index/clock_checked.html
+++ b/index/clock_checked.html
@@ -13,12 +13,13 @@
         <artifact>
             <h1>Stopwatch</h1>
             <h2>Vanilla JavaScript Stopwatch</h2>
-            <p><span id="seconds">00</span>:<span id="tens">00</span></p>
+            <p><span id="hours">00</span><span class="colon"> : </span><span id="minutes">00</span><span class ="colon"> : </span> <span id="seconds">00</span><span class ="colon"> : </span><span id="tens">00</span></p>
         </artifact>
         <artifact class="button_clock">
             <button id="button-start">Start</button>
             <button id="button-stop">Stop</button>
-            <button id="button-reset">Reset</button>
+            <button id="button-reset">Reset</button><br>
+            <button id ="button-countdown"> Count Down</button>
         </artifact>
         </session> 
         <script src=""></script>
